--- a/hasken.cabal
+++ b/hasken.cabal
@@ -52,6 +52,7 @@ executable hasken
                      , aeson
                      , safecopy
                      , mtl
+                     , split
 
   -- Directories containing source files.
   -- hs-source-dirs:
