put store in ~/hasken_store

--- a/hasken.cabal
+++ b/hasken.cabal
@@ -54,6 +54,8 @@ executable hasken
                      , mtl
                      , split
                      , QuickCheck
+                     , directory
+                     , filepath
 
   -- Directories containing source files.
   -- hs-source-dirs:
