nudge mtl into 2.1.3.1 version

--- a/hasken.cabal
+++ b/hasken.cabal
@@ -1,7 +1,7 @@
 -- The name of the package.
 name:                hasken
 
-version:             0.1.0.0
+version:             0.1.0.1
 
 synopsis: serve documents from a memory store
 
@@ -48,12 +48,11 @@ executable hasken
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.7 && <4.8
+                     , mtl <=2.1.3.1
                      , acid-state
                      , aeson
                      , safecopy
-                     , mtl
                      , split
-                     , QuickCheck
                      , directory
                      , filepath
 
