--- a/hasken.cabal
+++ b/hasken.cabal
@@ -47,14 +47,15 @@ executable hasken
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8
-                     , mtl <=2.1.3.1
-                     , acid-state
-                     , aeson
-                     , safecopy
-                     , split
-                     , directory
-                     , filepath
+  build-depends:
+      base
+    , mtl
+    , acid-state
+    , aeson
+    , safecopy
+    , split
+    , directory
+    , filepath
 
   -- Directories containing source files.
   -- hs-source-dirs:
