--- a/hasken.cabal
+++ b/hasken.cabal
@@ -1,52 +1,26 @@
--- The name of the package.
 name:                hasken
-
 version:             0.1.0.1
-
-synopsis: serve documents from a memory store
-
--- A longer description of the package.
--- description:
-
--- The license under which the package is released.
-license:             GPL-2
-
--- The file containing the license text.
-license-file:        LICENSE
-
--- The package author(s).
-author:              brady.ouren
-
--- An email address to which users can send suggestions, bug reports, and
--- patches.
-maintainer:          brady.ouren@gmail.com
-
--- A copyright notice.
--- copyright:
-
--- category:
-
-build-type:          Simple
-
--- Extra files to be distributed with the package, such as examples or a
--- README.
--- extra-source-files:
-
--- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
+build-type:          Simple
+synopsis:            tag and search documents from a local store
+license:             BSD3
+license-file:        LICENSE
+homepage:            https://github.com/tippenein/hasken
+bug-reports:         https://github.com/tippenein/hasken/issues
+author:              brady.ouren
+maintainer:          brady.ouren@gmail.com
+copyright:           2015 brady.ouren <brady.ouren@gmail.com>
+extra-source-files:
+  README.md
 
+source-repository head
+  type:     git
+  location: git://github.com/tippenein/hasken.git
 
 executable hasken
-  -- .hs or .lhs file containing the Main module.
+  hs-source-dirs:      src
   main-is:             Main.hs
-
-  -- Modules included in this executable, other than Main.
-  -- other-modules:
-
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
-
-  -- Other library packages from which modules are imported.
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base
     , mtl
@@ -56,10 +30,19 @@ executable hasken
     , split
     , directory
     , filepath
+  default-language:    Haskell2010
 
-  -- Directories containing source files.
-  -- hs-source-dirs:
-
-  -- Base language which the package is written in.
+test-suite hasken-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:
+      base
+    , hspec ==2.*
+    , HUnit -any
+    , QuickCheck -any
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  hs-source-dirs: test
+  other-modules: Spec
   default-language:    Haskell2010
 
