--- a/stack.yaml
+++ b/stack.yaml
@@ -10,6 +10,10 @@ extra-deps:
 - cereal-0.4.1.1
 - dlist-0.7.1.2
 - extensible-exceptions-0.1.1.4
+- ansi-terminal-0.6.2.3
+- async-2.0.2
+- quickcheck-io-0.1.2
+- setenv-0.1.1.3
 - hashable-1.2.3.3
 - mtl-2.2.1
 - network-2.6.2.1
@@ -24,4 +28,12 @@ extra-deps:
 - text-1.2.1.3
 - unordered-containers-0.2.5.1
 - vector-0.10.12.3
-resolver: ghc-7.10.1
+- HUnit-1.3.0.0
+- QuickCheck-2.8.1
+- hspec-2.2.0
+- hspec-core-2.2.0
+- hspec-discover-2.2.0
+- hspec-expectations-0.7.2
+- random-1.1
+- tf-random-0.5
+resolver: ghc-7.10.2
