--- a/hasken.cabal
+++ b/hasken.cabal
@@ -24,6 +24,7 @@ executable hasken
       base
     , mtl
     , acid-state
+    , wl-pprint
     , aeson
     , safecopy
     , split
@@ -42,7 +43,5 @@ test-suite hasken-test
     , HUnit -any
     , QuickCheck -any
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  hs-source-dirs: test
-  other-modules: Spec
   default-language:    Haskell2010
 
