--- a/stack.yaml
+++ b/stack.yaml
@@ -14,6 +14,7 @@ extra-deps:
 - async-2.0.2
 - quickcheck-io-0.1.2
 - setenv-0.1.1.3
+- wl-pprint-1.2
 - hashable-1.2.3.3
 - mtl-2.2.1
 - network-2.6.2.1
