--- a/hasken.cabal
+++ b/hasken.cabal
@@ -20,6 +20,7 @@ executable hasken
   hs-source-dirs:      src
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  other-modules: Document
   build-depends:
       base
     , mtl
