--- a/server/document-store.cabal
+++ b/server/document-store.cabal
@@ -21,17 +21,19 @@ executable document-store
   main-is:             Main.hs
   build-depends:
       base -any
-    , servant >= 2.4
+    , servant >= 0.4
     , servant-client >= 0.4
     , servant-server >= 0.4
     , text
     , aeson
     , either
     , acid-state
+    , transformers
     , mtl
     , safecopy
     , warp
     , wai
+    , wai-extra
   default-language:    Haskell2010
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
