--- a/stack.yaml
+++ b/stack.yaml
@@ -1,40 +1,5 @@
-flags:
-  text:
-    integer-simple: false
+flags: {}
 packages:
 - '.'
-extra-deps:
-- acid-state-0.13.0
-- aeson-0.10.0.0
-- attoparsec-0.13.0.1
-- cereal-0.4.1.1
-- dlist-0.7.1.2
-- extensible-exceptions-0.1.1.4
-- ansi-terminal-0.6.2.3
-- async-2.0.2
-- quickcheck-io-0.1.2
-- setenv-0.1.1.3
-- wl-pprint-1.2
-- hashable-1.2.3.3
-- mtl-2.2.1
-- network-2.6.2.1
-- old-locale-1.0.0.7
-- old-time-1.1.0.3
-- primitive-0.6.1.0
-- safecopy-0.8.5
-- scientific-0.3.4.0
-- split-0.2.2
-- stm-2.4.4
-- syb-0.6
-- text-1.2.1.3
-- unordered-containers-0.2.5.1
-- vector-0.10.12.3
-- HUnit-1.3.0.0
-- QuickCheck-2.8.1
-- hspec-2.2.0
-- hspec-core-2.2.0
-- hspec-discover-2.2.0
-- hspec-expectations-0.7.2
-- random-1.1
-- tf-random-0.5
-resolver: ghc-7.10.2
+extra-deps: []
+resolver: lts-3.4
