clean up and add cors

--- a/hasken.cabal
+++ b/hasken.cabal
@@ -47,6 +47,7 @@ executable hasken
     , warp
     , wai
     , wai-extra
+    , wai-cors
     , wl-pprint
     , yaml
   default-language:    Haskell2010
