--- a/hasken.cabal
+++ b/hasken.cabal
@@ -16,19 +16,20 @@ source-repository head
   type:     git
   location: git://github.com/tippenein/hasken.git
 
-executable hasken
-  hs-source-dirs:      src
-  main-is:             Main.hs
+library
+  hs-source-dirs:      lib
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  other-modules:
-      Document
-    , Config
-    , Sync
+  exposed-modules:
+      Local
+    , Remote
+    , Local.Document
+    , Local.Config
+    , Local.Sync
     , Remote.API
     , Remote.Client
     , Remote.Database
     , Remote.Server
-    , Remote.Types
+    , Remote.Main
   build-depends:
       base
     , acid-state
@@ -57,15 +58,28 @@ executable hasken
     , yaml
   default-language:    Haskell2010
 
+executable hasken
+  hs-source-dirs:      executable
+  main-is:             Main.hs
+  build-depends:
+      base -any
+    , hasken -any
+    , acid-state
+  default-language:    Haskell2010
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+
 test-suite hasken-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:
+    HaskenSpec
   build-depends:
       base
+    , hasken -any
     , hspec ==2.*
     , HUnit -any
     , QuickCheck -any
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
