--- a/hasken.cabal
+++ b/hasken.cabal
@@ -64,6 +64,8 @@ executable hasken
   build-depends:
       base -any
     , hasken -any
+    , text
+    , optparse-applicative
     , acid-state
   default-language:    Haskell2010
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
