--- a/hasken.yml.sample
+++ b/hasken.yml.sample
@@ -1,8 +1,8 @@
 # server to sync to
 remote:
   domain: deltadrome.us
-  port: 8081
-  userKey: aadd25e0-563f-4bd5-bcc8-86e833104789
+  port: 8082
+  userKey: <Your Unique User Key>
 
 # local store options
 local:
