add document entity to payloads

--- a/site/Makefile
+++ b/site/Makefile
@@ -1,5 +1,5 @@
 gen:
-	twirec -e Document -i . --elm-out src/Gen
+	twirec -e Document -i . --elm-out src/Gen --elm-version 0.17
 
 build:
 	elm package install
